--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "dependencies": {
         "jquery": "latest",
         "ember": "1.11",
-        "wookmark-jquery": "latest"
+        "wookmark-jquery": "1.4.8"
     },
     "devDependencies": {}
 }
