--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+/.idea
 *~
-*.pyc
-__pycache__
-.tmp
-*.rbc
-.sass-cache
-node_modules
-venders
-build
-dist
-.idea
+
+# compiled output
+/dist
+/tmp
+
+# dependencies
+/node_modules
+/bower_components
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
