--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,17 @@
 {
-    "name": "web-reddit",
-    "version": "0.0.0",
-    "dependencies": {
-        "jquery": "latest",
-        "ember": "1.11",
-        "wookmark-jquery": "1.4.8"
-    },
-    "devDependencies": {}
+  "name": "web-reddit",
+  "dependencies": {
+    "ember": "1.13.3",
+    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
+    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
+    "ember-data": "1.13.5",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
+    "ember-qunit": "0.4.1",
+    "ember-qunit-notifications": "0.0.7",
+    "ember-resolver": "~0.1.18",
+    "jquery": "^1.11.1",
+    "loader.js": "ember-cli/loader.js#3.2.0",
+    "qunit": "~1.17.1",
+      "wookmark-jquery": "1.4.8"
+  }
 }
