--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-    "name": "web-reddit",
-
-    "version": "0.0.0",
-
-    "dependencies": {
-        "underscore": "latest"
-    },
-
-    "devDependencies": {
-        "grunt": "latest",
-        "grunt-contrib-uglify": "latest",
-        "grunt-contrib-concat": "latest",
-        "grunt-neuter": "latest",
-        "grunt-contrib-watch": "latest",
-        "grunt-concat-sourcemap": "latest",
-        "grunt-contrib-copy": "latest",
-        "grunt-contrib-compass": "latest",
-        "grunt-ember-templates": "latest",
-        "grunt-browserify": "latest",
-        "mocha": "latest",
-        "should": "latest"
-    },
-
-    "engines": {
-        "node": "latest"
-    }
-
+  "name": "web-reddit",
+  "version": "0.0.0",
+  "description": "Small description for web-reddit goes here",
+  "private": true,
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember test"
+  },
+  "repository": "",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.0.2",
+    "ember-browserify": "^1.0.5",
+    "ember-cli": "1.13.1",
+    "ember-cli-app-version": "0.4.0",
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-compass": "0.0.5",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.3.15",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-uglify": "^1.0.1",
+    "ember-data": "1.13.5",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.2",
+    "underscore": "^1.8.3"
+  }
 }
