--- a/.jshintrc
+++ b/.jshintrc
@@ -22,11 +22,11 @@
   "onevar": false,
   "plusplus": false,
   "regexp": false,
-  "undef": true,
+  "undef": false,
   "sub": true,
   "strict": false,
   "white": false,
   "eqnull": true,
   "esnext": true,
-  "unused": true
+  "unused": false
 }
