--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ember-cli": "1.13.1",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
-    "ember-cli-compass": "0.0.5",
+    "ember-cli-compass-compiler": "0.0.18",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-htmlbars": "0.7.9",
